Add integration between moco/cucumber/webapp